Pin Z-index fix

--- a/src/components/Sidebar/SidebarElementWrapper/SidebarElementWrapper.scss
+++ b/src/components/Sidebar/SidebarElementWrapper/SidebarElementWrapper.scss
@@ -1,5 +1,4 @@
 .c-sidebar-element-wrapper__pin {
   right: 8px;
   top: 8px;
-  z-index: cudl-z("content-overlay");
 }
